--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
 </head>
 
 <body>
-    
+    <div id="grid-container">
+    <div  class ="value" id="super1"><img src="images/super-1.png"><p class="name">Spiderman</p><p class="number">12</p></div>
+    <div class ="value" id="super2"><img src="images/super-20.png"><p class="name">Thanos</p><p class="number">20</p></div>
+    <span id="score"><span class="number"> 5 - 10</span></span>
+    <div class ="value" id="super3"><img src="images/super-13.png"><p class="name">Hulk</p><p class="number">15</p></div>
+    <div class ="value" id="super4"><img src="images/super-14.png"><p class="name">DeadPool</p><p class="number">18</p></div>
+</div>
     <footer class="footer">Made with <img src="/images/Vector.svg"> by ProGrad</footer>
 </body>
 
