--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div id="grid-container">
-    <div  class ="value" id="super1"><img src="images/super-1.png"><p class="name">Spiderman</p><p class="number">12</p></div>
+    <div  class ="value" id="super1"><img src="images/super-2.png"><p class="name">Captain America</p><p class="number">12</p></div>
     <div class ="value" id="super2"><img src="images/super-20.png"><p class="name">Thanos</p><p class="number">20</p></div>
     <span id="score"><span class="number"> 15 - 10</span></span>
     <div class ="value" id="super3"><img src="images/super-13.png"><p class="name">Hulk</p><p class="number">15</p></div>
