--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class ="value" id="super3"><img src="images/super-13.png"><p class="name">Hulk</p><p class="number">15</p></div>
     <div class ="value" id="super4"><img src="images/super-14.png"><p class="name">DeadPool</p><p class="number">18</p></div>
 </div>
-    <footer class="footer">Made by ProGrad<img src="images/ht.png"></footer>
+    <footer class="footer">Happy coding ProGrad<img src="images/ht.png"></footer>
 </body>
 
 </html>
