--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,7 +16,7 @@
     <div class ="value" id="super3"><img src="images/super-13.png"><p class="name">Hulk</p><p class="number">15</p></div>
     <div class ="value" id="super4"><img src="images/super-14.png"><p class="name">DeadPool</p><p class="number">18</p></div>
 </div>
-    <footer class="footer">Happy coding ProGrad<img src="images/ht.png"></footer>
+    <footer class="footer">Happy coding ProGrad<i class="fa fa-heart"></i></footer>
 </body>
 
 </html>
